addons/website_sale/static/src/scss/product_tile.scss
/* ... */
.o_wsale_products_opt_design_chips {
    --_padding-base: calc(#{map-get($spacers, 2)} + calc(var(--o-wsale-products-grid-gap) * 0.25));

    --o-wsale-card-info-position: none;
    --o-wsale-card-border-width: #{$border-width};
    --o-wsale-card-border-radius: var(--o-wsale-opt-border-radius, 0px);
    --o-wsale-card-info-padding: #{map-get($spacers, 2)} 0 0 0;
    --o-wsale-card-padding: var(--_padding-base);
    --o-wsale-card-btns-row-padding: 0;
    --o-wsale-card-btns-margin-bottom: 0;
    --o-wsale-card-pseudobg-y: 0;
    --o-wsale-card-pseudobg-x: 0;
    --o-wsale-card-btns-inset: var(--_padding-base) var(--_padding-base) auto var(--_padding-base);

    --o-wsale-card-offset-top: var(--_padding-base);
    --o-wsale-card-offset-x: var(--_padding-base);

    &.o_wsale_products_opt_actions_onhover {
        --o-wsale-card-btns-inset: var(--o-wsale-card-offset-top) var(--o-wsale-card-offset-x) auto var(--o-wsale-card-offset-x);
    }

    &:where(:not(.o_wsale_products_opt_rounded_0)) {
        &.o_wsale_products_opt_actions_inline {
            --o-wsale-card-info-padding: #{map-get($spacers, 2)} 0 min(#{map-get($spacers, 2)}, calc(var(--o-wsale-opt-border-radius) - calc(var(--_padding-base) + var(--btn-border-radius)))) 0;
        }
        --o-wsale-card-thumb-border-radius: max(var(--border-radius-sm), calc(var(--o-wsale-opt-border-radius) - var(--_padding-base)));

        --_offset-top: calc(var(--o-wsale-card-thumb-border-radius) * 0.1);
        --_offset-h: calc(var(--o-wsale-card-thumb-border-radius) * 0.2);

        --o-wsale-card-offset-top: calc(var(--_padding-base) + var(--_offset-top));
        --o-wsale-card-offset-x: calc(var(--_padding-base) + var(--_offset-h));
        --o-wsale-ribbon-badge-offset-x: calc(#{map-get($spacers, 2)} + var(--_offset-h));
    }

    @include media-breakpoint-up(lg) {
        .o_wsale_attribute_previewer {
            width: calc(100% - (var(--o-wsale-card-offset-x) + #{map-get($spacers, 2)}) * 2);
        }
    }
}
.o_wsale_products_opt_design_grid {
    --o-wsale-card-height: 100%;
    --o-wsale-card-border-width: 0 #{$border-width $border-width} 0;
    --o-wsale-card-info-padding: #{map-get($spacers, 2)};
    --o-wsale-card-info-grow: 1;
    --o-wsale-card-border-radius: 0px !important;
    --o-wsale-card-padding: calc(var(--o-wsale-products-grid-gap-y) * 0.5) calc(var(--o-wsale-products-grid-gap, 16px) * 0.5);
    --o-wsale-topbar-padding-left: #{$container-padding-x * 0.5};
    --o-wsale-topbar-padding-right: calc(var(--o-wsale-container-fluid-padding-xl, var(--gutter-x)) * 0.5);
    --o-wsale-topbar-border-width: 0 0 #{$border-width};
    --o-border-color: #{$gray-300};
    --border-color: #{$gray-300};
    --gap: 0px;
    --o-wsale-card-attribute-previewer-thumbnail-border-radius: 0;

    --o-wsale-card-offset-top: 0px;
    --o-wsale-card-offset-x: 0px;

    &.o_wsale_products_opt_layout_list {
        --o-wsale-card-info-attributes-display: flex;
        --o-wsale-card-info-margin: 0;
        --o-wsale-card-attribute-previewer-width: var(--o-wsale-card-info-text-width);
        --o-wsale-card-sub-display: contents;
        --o-wsale-card-price-display: flex;
        --o-wsale-card-btn-label-display: none;
        --o-wsale-card-btn-submit-label-display: inline;
        --o-wsale-card-btns-align-items: center;
        --o-wsale-card-info-attributes-justify-content: start;

        @include media-breakpoint-down(md) {
            --o-wsale-card-info-attributes-display: contents;
        }
        @include media-breakpoint-between(md, xl) {
            --o-wsale-card-btns-flex-direction: column;
            --o-wsale-card-btns-justify-content: center;
            --o-wsale-card-btns-align-items: none;
            --o-wsale-card-btn-submit-order: -2;
        }
        @include media-breakpoint-up(md) {
            --o-wsale-card-info-text-width: 200px;
            --o-wsale-card-price-flex-basis: 100%;
            --o-wsale-card-info-attributes-justify-content: center;

            .product_price, .o_wish_price {
                margin: auto;
            }
        }
        @include media-breakpoint-up(xl) {
            --o-wsale-card-btn-submit-order: 1;
            --o-wsale-card-info-text-width: 280px;

            &:where(.o_wsale_products_opt_has_comparison):where(:has(.o_add_compare)),
            &:where(:has(.o_add_to_compare)) {
                --o-wsale-comparison-btn-placeholder-display: inline-block;
            }
        }
        @include media-breakpoint-up(xxl) {
            --o-wsale-card-info-text-width: 360px;
        }
    }
}
/* ... */

