[FIX] website_sale: adapt the shop grid layout in RTL
Prior to this commit, the shop grid layout was broken in RTL due to
misplaced left borders and padding. This commit adjusts those elements
for RTL, fixing the layout.

task-5933289

X-original-commit: b47555cf6f49d981091514f13e62b83329616c04

--- a/addons/website_sale/static/src/scss/product_tile.scss
+++ b/addons/website_sale/static/src/scss/product_tile.scss
@@ -672,7 +672,7 @@
 }
 .o_wsale_products_opt_design_grid {
     --o-wsale-card-height: 100%;
-    --o-wsale-card-border-width: 0 #{$border-width $border-width} 0;
+    --o-wsale-card-border-width: 0 #{$border-width $border-width} 0 #{"/*rtl: 0 0 " + $border-width $border-width + "*/"};
     --o-wsale-card-info-padding: #{map-get($spacers, 2)};
     --o-wsale-card-info-grow: 1;
     --o-wsale-card-border-radius: 0px !important;
